--- a/assets/stylesheets/existing/temp-content.css
+++ b/assets/stylesheets/existing/temp-content.css
@@ -425,7 +425,8 @@ td {
 	clear : right;
 }
 
-.seBlogViewLinks img {
+.seBlogViewLinks img, 
+#SEBlogViewLinks img {
 	border: none;
 	padding: 0;
 	margin: 0;
