--- a/assets/stylesheets/partials/_brand.scss
+++ b/assets/stylesheets/partials/_brand.scss
@@ -32,6 +32,7 @@ $brand-font-family: Lato, Arial, sans-serif;
     line-height: 28px;
     padding: 20px 0;
     font-family: $brand-font-family;
+    font-weight: 700;
     letter-spacing:.4px;
     margin: 13px 0 0;
   }
