Removed homepage class from non home pages

--- a/assets/stylesheets/inside-template.scss
+++ b/assets/stylesheets/inside-template.scss
@@ -8,7 +8,7 @@
 @import "partials/base";
 
 /* Partials */	
-@import "partials/grid";
+@import "partials/insideGrid";
 @import "partials/typography";
 @import "partials/lists";
 @import "partials/header";
