--- a/assets/stylesheets/partials/_brand.scss
+++ b/assets/stylesheets/partials/_brand.scss
@@ -1,5 +1,3 @@
-$brand-font-family: Lato, Arial, sans-serif;
-
 .brand {
   display: inline-block;
   float: left;
@@ -43,16 +41,17 @@ $brand-font-family: Lato, Arial, sans-serif;
 }
 
 @media only screen and (max-width: 480px){
-  
-.brand .brand-logo{
-  height:65px;
-  width:65px;
-  margin-right:5px;
-}
+  .homepage {
+    .brand .brand-logo{
+      height:65px;
+      width:65px;
+      margin-right:5px;
+    }
 
-.brand .brand-heading {
-    font-size: 1.4em;
-    line-height: 25px;
-    margin: 10px 0 0;
-}
+    .brand .brand-heading {
+        font-size: 1.4em;
+        line-height: 25px;
+        margin: 10px 0 0;
+    }
+  }
 }
