--- a/assets/stylesheets/partials/_header.scss
+++ b/assets/stylesheets/partials/_header.scss
@@ -76,40 +76,6 @@ header {
   }
 }
 
-.secondary-nav {
-    background: $darker-gray;
-    font-size:.85em;
-    padding: 10px 0;
-
-
-    .secondary-nav-list {
-      padding: 8px 0;
-      
-      .secondary-nav-list-item {
-        border-right: 1px solid $light-gray;
-
-        &:first-child {
-          padding-left: 0;
-        }
-
-        &:last-child {
-          border: none;
-          padding-right: 0;
-        }
-      }
-    }
-
-    a {
-      color: $light-gray;
-      display: block;
-      line-height: 11px;
-
-      &:hover {
-        color: $white;
-      }
-    }
-  }
-
 .subscribe {
   border-right: 1px solid $light-gray;
   display: inline-block;
@@ -117,68 +83,79 @@ header {
 }
 
 @media only screen and (min-width: 960px) and (max-width: 1199px) {
-.primary-nav .primary-nav-item a {
-    padding: 35px 5px 33px 35px;
-    width: auto;
+    .homepage {
+      .primary-nav .primary-nav-item a {
+          padding: 35px 5px 33px 35px;
+          width: auto;
+      }
+
+      .primary-nav h2 {
+          font-size: 1.6em;
+          min-width: 200px;
+      }
+
+      .primary-nav .primary-nav-item {
+          min-width: 30%;
+      }
+
+      .primary-nav {
+          font-size: 80%;
+      }
+    }
 }
 
-.primary-nav h2 {
-    font-size: 1.6em;
-    min-width: 200px;
-}
-
-.primary-nav .primary-nav-item {
-    min-width: 30%;
-}
-
-.primary-nav {
-    font-size: 80%;
-}
-
-}
-
-
-@media only screen and (min-width: 768px) and (max-width: 992px) {
-  .primary-nav{
-    width:100%;
-  }
-
-  .primary-nav .primary-nav-item a{
-    background: url("../../assets/img/little-arrow.png") no-repeat scroll 12.5px 22px rgba(0, 0, 0, 0);
-    padding: 20px 0 20px 40px;
-  }
-  .primary-nav .primary-nav-item{
-    margin: 0 0 5px;
-  }
-}
-
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 1199px) {
   .primary-nav {
-    .primary-nav-item {
-      border-right: 0;
-      border-bottom: 5px solid $red;
-  
-      &:last-child {
-        border-bottom: 0;
-      }
-
-      a {
-        background: url("../../assets/img/little-arrow.png") no-repeat 12.5px 18px;
-        padding: 15px 0px 13px 40px;
-      }
-    }
+      font-size: 80%;
   }
-  .secondary-nav {
-    padding: 10px;
+}
+
+@media only screen and (min-width: 767px) and (max-width: 992px) {
+  .homepage {
+    .primary-nav{
+      width:100%;
+    }
+
+    .primary-nav .primary-nav-item a{
+      background: url("../../assets/img/little-arrow.png") no-repeat scroll 12.5px 22px rgba(0, 0, 0, 0);
+      padding: 20px 0 20px 40px;
+    }
+    .primary-nav .primary-nav-item{
+      margin: 0 0 5px;
+    }
   }
 }
 
 @media only screen and (max-width: 767px) {
-  .primary-nav, .secondary-nav {
-    display: none;
+  .homepage {
+    .primary-nav {
+      .primary-nav-item {
+        border-right: 0;
+        border-bottom: 5px solid $red;
+    
+        &:last-child {
+          border-bottom: 0;
+        }
 
-    &.mobile-menu-visible {
-      display: block;
+        a {
+          background: url("../../assets/img/little-arrow.png") no-repeat 12.5px 18px;
+          padding: 15px 0px 13px 40px;
+        }
+      }
     }
   }
+  
+}
+
+@media only screen and (max-width: 767px) {
+  .homepage {
+    .primary-nav, .secondary-nav {
+      display: none;
+
+      &.mobile-menu-visible {
+        display: block;
+      }
+    }
+  }
+  
 }
