Added secondary nav
Added a new partial and added this to our main inside sass file.

--- a/assets/stylesheets/inside-template.scss
+++ b/assets/stylesheets/inside-template.scss
@@ -13,6 +13,7 @@
 @import "partials/lists";
 @import "partials/header";
 @import "partials/nav";
+@import "partials/secondaryNav";
 @import "partials/brand";
 
 @import "partials/search";
