--- a/assets/stylesheets/modules/_utility.scss
+++ b/assets/stylesheets/modules/_utility.scss
@@ -4,9 +4,9 @@
 	list-style-type: none;
 
 	li {
-		display: inline;
+		display: inline-block;
 
-		padding: 0 10px;
+		padding: 0 10px; //Default padding
 		
 		&:first-child {
 			padding-left: 0;
@@ -14,11 +14,20 @@
 
 		a {
 			display: block;
-			line-height: 12px;
+			line-height: 12px; //TODO: Remove this line-height, should go on the list
 		}
 	}
 }
 
+/*Typography*/
+.uppercase{
+    text-transform:uppercase;
+}
+.smaller-text{
+    font-size:65%;
+}
+
+/*Clearfix*/
 .clearfix:before,
 .clearfix:after {
     content: "";
