--- a/assets/stylesheets/modules/_colors.scss
+++ b/assets/stylesheets/modules/_colors.scss
@@ -1,4 +1,5 @@
 $black: #000;
+$img-border-gray: #ccc;
 $light-gray: #dbdbdb;
 $dark-gray: #444;
 $darker-gray: #333;
@@ -10,6 +11,6 @@ $gold:#feb30c;
 $white: #fff;
 
 $link-color: $navy;
-
+$alert-link-hover: #003399;
 
 $base-font-color: $light-gray;
