--- a/assets/stylesheets/modules/_variables.scss
+++ b/assets/stylesheets/modules/_variables.scss
@@ -1,2 +1,8 @@
-/*Type Variables*/
+/*Type*/
+$default-font-family: Arial, Helvetica, sans-serif;
 $brand-font-family: Lato, Arial, sans-serif;
+$headline-font: 'Patua One', sans-serif;
+
+
+/*Images*/
+$little-arrow: "../../assets/img/little-arrow.png";
