--- a/assets/stylesheets/partials/components/_primaryNav.scss
+++ b/assets/stylesheets/partials/components/_primaryNav.scss
@@ -1,61 +1,41 @@
-header {
-	.primary-nav {
-		background: $red;
-		color: $white;
-
-		a {
-			color: $white;
-		}
-	}
-
-	.page-tools {
-    text-align:right;
-		a, ul {
-			display: inline-block;
-		}
-	}
-
-
-}
-
-.primary-header {
-  background: $red;
-  color: white;
-  height: 100%;
-}
-
 .primary-nav {
-  height: 100%;
-  list-style-type: none;
+  background: $red;
+  color: $white;
   float: right;
+  list-style-type: none;
+  height: 100%;
   margin: 0;
   padding: 0;
-  
+
+  a {
+    color: $white;
+  }
+
   .primary-nav-item {
     background-color: darken($red, 6);
     border-right: 5px solid $red;
     display: inline-block;
-    font-family: 'Patua One', sans-serif;
+    font-family: $headline-font;
     height: 100%;
     padding: 0 10px 0 0;
-    
+
     &:last-child {
       border-right: none;
     }
-    
+
     &:hover {
       background-color: rgba(red, .5);
     }
-    
+
     .primary-nav-item__headline {
       border: none;
       font-size: 1.5em;
       letter-spacing: .5px;
       margin: 0;
       padding: 0;
-      
+
     }
-    
+
     .primary-nav-item__tagline {
       display: block;
       font-family: Arial, sans-serif;
@@ -64,9 +44,9 @@ header {
       letter-spacing: 0;
       margin-top: 10px;
     }
-    
+
     a {
-      background: url('../../assets/img/little-arrow.png') no-repeat 12.5px 37px;
+      background: url($little-arrow) no-repeat 12.5px 37px;
       color: white;
       display: block;
       line-height: 22px;
@@ -76,37 +56,31 @@ header {
   }
 }
 
-.subscribe {
-  border-right: 1px solid $light-gray;
-  display: inline-block;
-  padding-right: 10px;
-}
-
 @media only screen and (min-width: 960px) and (max-width: 1199px) {
-    .homepage {
-      .primary-nav .primary-nav-item a {
-          padding: 35px 5px 33px 35px;
-          width: auto;
-      }
-
-      .primary-nav h2 {
-          font-size: 1.6em;
-          min-width: 200px;
-      }
-
-      .primary-nav .primary-nav-item {
-          min-width: 30%;
-      }
-
-      .primary-nav {
-          font-size: 80%;
-      }
+  .homepage {
+    .primary-nav .primary-nav-item a {
+      padding: 35px 5px 33px 35px;
+      width: auto;
     }
+
+    .primary-nav h2 {
+      font-size: 1.6em;
+      min-width: 200px;
+    }
+
+    .primary-nav .primary-nav-item {
+      min-width: 30%;
+    }
+
+    .primary-nav {
+      font-size: 80%;
+    }
+  }
 }
 
 @media only screen and (max-width: 1199px) {
   .primary-nav {
-      font-size: 80%;
+    font-size: 80%;
   }
 }
 
@@ -117,7 +91,7 @@ header {
     }
 
     .primary-nav .primary-nav-item a{
-      background: url("../../assets/img/little-arrow.png") no-repeat scroll 12.5px 22px rgba(0, 0, 0, 0);
+      background: url($little-arrow) no-repeat scroll 12.5px 22px rgba(0, 0, 0, 0);
       padding: 20px 0 20px 40px;
     }
     .primary-nav .primary-nav-item{
@@ -132,19 +106,19 @@ header {
       .primary-nav-item {
         border-right: 0;
         border-bottom: 5px solid $red;
-    
+
         &:last-child {
           border-bottom: 0;
         }
 
         a {
-          background: url("../../assets/img/little-arrow.png") no-repeat 12.5px 18px;
+          background: url($little-arrow) no-repeat 12.5px 18px;
           padding: 15px 0px 13px 40px;
         }
       }
     }
   }
-  
+
 }
 
 @media only screen and (max-width: 767px) {
@@ -157,5 +131,5 @@ header {
       }
     }
   }
-  
+
 }
