--- a/assets/stylesheets/partials/components/_translateLinks.scss
+++ b/assets/stylesheets/partials/components/_translateLinks.scss
@@ -1,4 +1,4 @@
-$flag-sprite: "../../assets/img/footer-flags-sprite.jpg";
+$flag-sprite: "/sebin/x/a/footer-flags-sprite.jpg";
 
 .translate-page-list-item {
 	background-image: url($flag-sprite);
