--- a/assets/stylesheets/partials/components/_social.scss
+++ b/assets/stylesheets/partials/components/_social.scss
@@ -1,4 +1,4 @@
-$icon-sprite: "../../assets/img/social-icons-sprite.png";
+$icon-sprite: "http://staging.baltimorecountymd.gov/homepageredesign/assets/img/social-icons-sprite.png";
 
 .social-media-list {
 	list-style-type: none;
