--- a/assets/stylesheets/partials/base/_base.scss
+++ b/assets/stylesheets/partials/base/_base.scss
@@ -1,5 +1,4 @@
 @import "../../modules/all";
-
 html {
   box-sizing: border-box;
 }
@@ -12,6 +11,7 @@ html, body {
 	background: $light-gray;
 	color: $base-font-color;
 	font-family: $default-font-family;
+	font-size: 16px;
 	margin: 0;
 	padding: 0;
 }
