--- a/assets/stylesheets/partials/base/_secondaryFooter.scss
+++ b/assets/stylesheets/partials/base/_secondaryFooter.scss
@@ -2,8 +2,11 @@
 	background: $red;
 	color: $white;
 	padding: 20px 0;
-
-	.county-links-list-item{
+	
+	a {
+		color: white;
+	}
+	.county-links-list-item {
 		border-right: 1px solid $white;
 		padding: 0 5px;
 
