--- a/assets/stylesheets/partials/components/_buttons.scss
+++ b/assets/stylesheets/partials/components/_buttons.scss
@@ -1,5 +1,8 @@
 button {
+
     background: $gold;
+    cursor: pointer;
+    font-family: $default-font-family;
     font-size: 1.1em;
     font-weight: 700;
     padding: 0 20px;
