--- a/assets/stylesheets/partials/components/_search.scss
+++ b/assets/stylesheets/partials/components/_search.scss
@@ -10,9 +10,13 @@
   .search-text {
     overflow: hidden;
   }
-
+  
+  .search-label {
+    position: absolute; 
+    left: -999em;
+  }
+  
   .search-input {
-    font-size: 1.2em;
     float: left;
     padding: 0px 20px;
     width: 100%;
@@ -21,4 +25,6 @@
   button {
     float: right;
   }
+
+
 }
