--- a/assets/stylesheets/existing/temp-content.css
+++ b/assets/stylesheets/existing/temp-content.css
@@ -56,7 +56,19 @@ td {
 .seBlogViewSmallCal td {
 	line-height: 1;
 }
-
+#maincontainer {
+	width : 1000px;
+	margin : 0 auto;
+}
+#backgroundshadow {
+	width : 100%;
+	height : auto;
+	background-image : url(http://baltimorecountymd.gov/sebin/b/h/background-shadow-subpage.png);
+	background-position : top center;
+	background-repeat : repeat-y;
+	padding : 0 0 20px;
+	display : table;
+}
 #TableAlternativeRows caption {
 	font-family : Arial, Helvetica, sans-serif;
 	font-size : 12px;
