--- a/assets/stylesheets/partials/components/_alert.scss
+++ b/assets/stylesheets/partials/components/_alert.scss
@@ -23,3 +23,20 @@
   font-size:.6em;
   text-align:center;
 }
+
+@media only screen and (max-width: 1100px) {
+  .alert h1 {
+    line-height: 30px;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .alert {
+    font-size: .5em;
+    margin: -20px 0 20px;
+
+    h1 {
+      line-height: 1.5;
+    }
+  }
+}
