Added pages to manage se templates
These pages are being used as either inclusions or are the actual
template html that differs from the dev html files.

--- a/staging/components/county-address.html
+++ b/staging/components/county-address.html
@@ -1,4 +1,4 @@
-<img src="assets/img/footer-county-shape.png" alt="" class="county-map hidden-sm hidden-xs">
+<img src="assets/img/footer-county-shape.png" alt="" class="county-map">
 <div class="county-address">
 	<h2>Baltimore County Government</h2>
 	<p>Historic Courthouse</br>
