--- a/assets/stylesheets/main.scss
+++ b/assets/stylesheets/main.scss
@@ -1,5 +1,5 @@
-@import url(http://fonts.googleapis.com/css?family=Patua+One);
-@import url(http://fonts.googleapis.com/css?family=Lato:700);
+@import url(//fonts.googleapis.com/css?family=Patua+One);
+@import url(//fonts.googleapis.com/css?family=Lato:700);
 
 /*Resets*/
 @import "partials/base/normalize";
