--- a/assets/stylesheets/partials/base/_brand.scss
+++ b/assets/stylesheets/partials/base/_brand.scss
@@ -37,6 +37,9 @@
 
 @media only screen and (max-width: 480px){
   .homepage {
+    .brand {
+      padding: 5px;
+    }
     .brand .brand-heading {
         font-size: 1.2em;
         line-height: 25px;
