Adjusted margin around county map image

--- a/assets/stylesheets/partials/components/_countyAddress.scss
+++ b/assets/stylesheets/partials/components/_countyAddress.scss
@@ -1,7 +1,7 @@
 .county-map, .county-address {
 	float: left;
 }
-.county-map {
-	margin-top: 15px;
-	padding: 0 30px 0 0;
+.footer .county-map {
+	margin: 15px 15px 0 0
+
 }
