--- a/assets/stylesheets/partials/homepage/_carousel.scss
+++ b/assets/stylesheets/partials/homepage/_carousel.scss
@@ -117,7 +117,7 @@
       background: white;
       color: $dark-gray;
       position:relative;
-      padding: 10px;
+      padding: 20px 20px 0;
 
       h2 {
         color: $dark-gray;
