Added margin between the news stories and read more link

--- a/assets/stylesheets/partials/homepage/_newsFeed.scss
+++ b/assets/stylesheets/partials/homepage/_newsFeed.scss
@@ -62,6 +62,7 @@
 /*Clear News Feed*/
 .SESyndicationModule {
   @extend .clearfix;
+  margin-bottom: 20px;
 }
 
 /*This is based on Site Executive Structure, we do not want to show the extra
