Fixed issue with Mobile Secondary Nav
Fixed Padding and Placement

--- a/assets/stylesheets/partials/components/_secondaryNav.scss
+++ b/assets/stylesheets/partials/components/_secondaryNav.scss
@@ -24,7 +24,15 @@
   .homepage {
     .secondary-nav {
       font-size:.85em;
-      padding: 10px;
+      padding: 10px 30px;
+
+      a {
+        color: $light-gray;
+
+        &:hover {
+          color: white;
+        }
+      }
     }
   }
   
