--- a/assets/stylesheets/partials/homepage/_newsFeed.scss
+++ b/assets/stylesheets/partials/homepage/_newsFeed.scss
@@ -14,6 +14,10 @@
     float: left;
     padding: 0 1.5em 0 0;
     width: 50%;
+
+    &:nth-child(3) {
+      clear:both;
+    }
   }
   .pub-date{
     font-weight:900;
