--- a/assets/stylesheets/partials/components/_primaryNav.scss
+++ b/assets/stylesheets/partials/components/_primaryNav.scss
@@ -60,6 +60,8 @@
   }
 }
 
+
+
 @media only screen and (min-width: 960px) and (max-width: 1199px) {
   .homepage {
     .primary-nav .primary-nav-item a {
@@ -82,7 +84,13 @@
   }
 }
 
-@media only screen and (max-width: 1199px) {
+@media only screen and (min-width: 992px) and (max-width: 1022px) {
+  .primary-nav h2 {
+      font-size: 1.5em;
+  }
+}
+
+@media only screen and (max-width: 992px) {
   .homepage {
     .primary-nav .primary-nav-item {
       .primary-nav-item__headline {
