Adjusted padding between 922 and 1022

--- a/staging/components/social-icon-county-list.html
+++ b/staging/components/social-icon-county-list.html
@@ -8,7 +8,7 @@
 		</a>
 	</li>
 	<li class="social-media-list-item social-media-list-item-photos">
-		<a href="https://www.flickr.com/photos/baltimorecounty/" title="View the Baltimore County Flickr album.">
+		<a href="http://www.baltimorecountymd.gov/socialmedia/index.html#photos" title="View the Baltimore County Flickr album.">
 		</a>
 	</li>
 	<li class="social-media-list-item social-media-list-item-youtube">
